--- a/August/NewApplication/consultar.html
+++ b/August/NewApplication/consultar.html
@@ -111,7 +111,7 @@
 
                             <!-- Terceira coluna -->
                             <td><button type="button" class="btn btn-primary btn-sm">Editar</button>
-                                <button type="button" class="btn btn-primary btn-sm">Excluir
+                                <button type="button" class="btn btn-primary btn-sm">Excluir</button>
                             </td>
 
                         </tr> 
